Mon Apr 26 2004  Joe Allen <jhallen@world.std.com>
	* bw.c tty.c uedit.c utf8.c *rc.in:

	Fix rtarw: was not fixing xcol.

	TAB key now does smart indenting.

	smart home goes to real home first, then indentation point.

Sun Apr 25 2004  Joe Allen <jhallen@world.std.com>
	* b.c bw.c scrn.c uedit.c utf8.c utf8.h:

	Better handling of iconv() conversion errors.

	Better handling of error UTF-8 sequences.

Sat Apr 24 2004  Joe Allen <jhallen@world.std.com>
	* utf8.c, utf8.h, scrn.c, bw.c :

	Fixed utf8 encoder for characters between 0x10000 and 0x1FFFF.

	Print <XXXX> for unicode control characters.

Fri Apr 23 2004  Joe Allen <jhallen@world.std.com>

	Added -guess_crlf and -guess_indent options.

	Update *rc files.

	Updated documentation.

Thu Apr 22 2004  Joe Allen <jhallen@world.std.com>
	* cmd.c, pw.c, pw.h, rc.c, syntax.c, syntax.h, types.h, uedit.c,
	utils.c, utils.h, syntax/c.jsf.in:

	Fixed uopen() ^] for overtype mode.

	Added 'istrings' option in syntax files for ignoring case
	in strings.

	Added ^T Y- allows you to select syntax during run time (tab
	completion works too!)

	Added ^T P- picture mode: can move and type anywhere on the screen,
	good for drawing ASCII art.

Thu Apr 22 2004  Joe Allen <jhallen@world.std.com>
	* uedit.c:

	Tab key only inserts when past end of line in overtype mode.


Thu Apr 22 2004  Joe Allen <jhallen@world.std.com>
	* uedit.c:

	Fixed bugs where overtype and wordwrap modes were interacting.
	Hope this doesn't cause new bugs...

Thu Apr 22 2004  Joe Allen <jhallen@world.std.com>
	* uedit.c:

	Now, enter does not insert new line when in overtype mode (unless at
	end of file).  Somebody asked for this.

Wed Apr 21 2004  Joe Allen <jhallen@world.std.com>
	* b.c, b.h, joerc.in, rc.c, types.h, ublock.c, uedit.c:

	Added -purify option which fixes indentation
	if necessary for ^K, ^K. and smart backspace.

Wed Apr 21 2004  Joe Allen <jhallen@world.std.com>
	* ublock.c :

	^K , and ^K . now have improved purity checking